--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+node_modules/
+dist/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/dist
+/build
 /.pnp
 .pnp.js
 
